# sist2

./: .dockerignore  .drone.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Diagram1.dia  Dockerfile  Dockerfile.arm64  README.md  USAGE.md  docker-compose.yml  mime.csv
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue-template.md
.teamcity/: settings.kts
CMakeModules/: FindLibMagic.cmake  FindOpenSSL.cmake  FindPackageHandleStandardArgs.cmake
Docker/: Dockerfile  build.sh
DockerArm64/: Dockerfile  build.sh
ci/: build.sh  build_arm64.sh
contrib/systemd/: Makefile  README.md  sist2-update-all.sh  sist2-update-files.sh  sist2-update-nextcloud.sh  sist2-update.service  sist2-update.timer
docs/: USAGE.md  auth0.md  scripting.md
include/mce/: config.h  helper.h  textreader.h  textwriter.h
include/opc/: config.h  container.h  file.h  helper.h  inputstream.h  opc.h  outputstream.h  part.h  properties.h  relation.h  xmlreader.h  xmlwriter.h  zip.h
include/plib/: plib.h
schema/: mappings.json  pipeline.json  settings.json  settings_legacy.json
scripting/: README.md
scripts/: before_build.sh  build.sh  build_arm64.sh  generate_big_index.py  get_static_libs.sh  get_static_libs_freebsd.sh  index_static.py  magic_static.py  mime.csv  mime.py  reset.sh  serve_static.py  sqlite_extension.c  sqlite_extension_compile.sh  start_dev_es.sh  start_dev_es_6.sh  start_dev_es_8.sh  test_in_docker.sh
sist2-admin/: requirements.txt
sist2-admin/frontend/: package-lock.json  package.json  vue.config.js
sist2-admin/frontend/public/: index.html
sist2-admin/frontend/src/: App.vue  Sist2AdminApi.js  main.js  util.js
sist2-admin/frontend/src/components/: FrontendListItem.vue  IndexOptions.vue  JobCheckboxGroup.vue  JobListItem.vue  JobOptions.vue  JobSelect.vue  NavBar.vue  ScanOptions.vue  SearchBackendListItem.vue  SearchBackendSelect.vue  TaskListItem.vue  UserScriptListItem.vue  UserScriptPicker.vue  WebOptions.vue
sist2-admin/frontend/src/i18n/: messages.js
sist2-admin/frontend/src/router/: index.js
sist2-admin/frontend/src/store/: index.js
sist2-admin/frontend/src/views/: Frontend.vue  Home.vue  Job.vue  SearchBackend.vue  Tail.vue  Tasks.vue  UserScript.vue
sist2-admin/sist2_admin/: app.py  config.py  cron.py  jobs.py  notifications.py  script.py  sist2.py  state.py  tesseract.py  util.py  web.py
sist2-vue/: .gitignore  babel.config.js  fslightbox-vue.tgz  package-lock.json  package.json  tsconfig.json  vue.config.js  watch.sh
sist2-vue/public/: index.html
sist2-vue/src/: App.vue  Sist2Api.js  Sist2Api.ts  Sist2ElasticsearchQuery.js  Sist2ElasticsearchQuery.ts  Sist2Query.ts  Sist2SqliteQuery.js  Sist2SqliteQuery.ts  main.js  shims-tsx.d.ts  util-js.js  util.js  util.ts
sist2-vue/src/components/: AnalyzedContentSpan.vue  AnalyzedContentSpanContainer.vue  ContentDiv.vue  D3DateHistogram.vue  D3MimeBarCount.vue  D3MimeBarSize.vue  D3SizeHistogram.vue  D3Treemap.vue  DateSlider.vue  DebugInfo.vue  DisplayModeToggle.vue  DocCard.vue  DocCardWall.vue  DocFileTitle.vue  DocInfoModal.vue  DocList.vue  DocListItem.vue  EmbeddingsSearchBar.vue  FeaturedFieldsLine.vue  FullThumbnail.vue  HelpDialog.vue  IndexDebugInfo.vue  IndexPicker.vue  InfoTable.vue  LazyContentDiv.vue  Lightbox.vue  LightboxCaption.vue  MimePicker.vue  NavBar.vue  PathTree.vue  Preloader.vue  ResultsCard.vue  SearchBar.vue  SizeSlider.vue  SmallBadge.vue  SortSelect.vue  TagContainer.vue  TagPicker.vue  ThumbnailProgressBar.vue
sist2-vue/src/components/icons/: ClipboardIcon.vue  DebugIcon.vue  FileIcon.vue  GearIcon.vue  LanguageIcon.vue  MlIcon.vue  Sist2Icon.vue
sist2-vue/src/i18n/: messages.js  messages.ts
sist2-vue/src/ml/: BPETokenizer.js  BertNerModel.js  BertTokenizer.js  CLIPTransformerModel.js  ModelStore.js  mlUtils.js  modelsRepo.js
sist2-vue/src/plugins/: auth0.js  bootstrap-vue.js
sist2-vue/src/router/: auth0.ts  index.js  index.ts
sist2-vue/src/store/: index.js  index.ts
sist2-vue/src/views/: Configuration.vue  FilePage.vue  SearchPage.vue  StatsPage.vue
src/: cli.c  cli.h  ctx.c  ctx.h  log.c  log.h  main.c  sist.h  stats.c  stats.h  tpool.c  tpool.h  types.h  util.c  util.h
src/auth0/: auth0_c_api.cpp  auth0_c_api.h
src/database/: database.c  database.h  database_embeddings.c  database_fts.c  database_schema.c  database_stats.c  database_stats.h
src/index/: elastic.c  elastic.h  static_generated.c  web.c  web.h
src/io/: serialize.c  serialize.h  store.c  store.h  walk.c  walk.h
src/mempool/: mempool.c  mempool.h
src/parsing/: arc.c  arc.h  cbr.c  cbr.h  doc.c  doc.h  font.c  font.h  fs_util.h  magic_util.c  magic_util.h  media.c  media.h  mime.c  mime.h  mime_generated.c  parse.c  parse.h  pdf.c  pdf.h  sidecar.c  sidecar.h  text.c  text.h
src/static/: search.html  stats.html
src/static/css/: autocomplete.min.css  bootstrap-colorpicker.min.css  dark.css  ion.rangeSlider.skinFlat.min.css  light.css  lity.min.css
src/static/js/: 5_inspire-tree.min.js  bootstrap-colorpicker.min.js  dom.js  ion.rangeSlider.min.js  lity.min.js  search.js  util.js
src/web/: auth_basic.c  auth_basic.h  serve.c  serve.h  static_generated.c  web_fts.c  web_util.c  web_util.h
tests/: test_scan.py
web/: search.html
web/css/: dark.css  inspire-tree-light.min.css  ion.rangeSlider.min.css  ion.rangeSlider.skinFlat.min.css  light.css  main.css
web/js/: 1_popper.min.js  3_bootstrap.bundle.min.js  5_inspire-tree.min.js  6_inspire-tree-dom.min.js  dom.js  search.js  util.js
